# 5FX-Tools

./: 5FX-autostart.py  CMakeLists.txt  Makefile  Readme.md  sfx-start-jack.service  sfx-start-server.service
src/: 5FX-Autostart.py  5FX-SystemCheckup.py  CMakeLists.txt
src/hw/: 5FX-IO.cpp  AKAI_APC40.json  CMakeLists.txt  MOTU-1248-Bridge.py  MOTU-1248.py
src/hw/tests/: Test-5FX-IO.py
src/sys/: 5FX-PulseAudioBridge.sh  5FX-SystemCheckup.py
src/tools/: 5FX-Session.py
